--- a/scripts/Jenkinsfile
+++ b/scripts/Jenkinsfile
@@ -9,24 +9,24 @@ pipeline {
     stages {
         stage('Build') {
             steps {
-                sudo apt install python3.8-venv -y
+                sh """sudo apt install python3-venv -y
                 python3 -m venv venv
                 . ./venv/bin/activate
-                pip3 install -r requirements.txt
+                pip3 install -r requirements.txt"""
             }
         }
         stage('Test') {
             steps {
-                python3 -m pytest --junitxml unittests.xml
-                python3 -m pytest --cov-report xml:coverage.xml 
+                sh""" /home/jenkins/.jenkins/workspace/pipeline/venv/python3 -m pytest --junitxml unittests.xml
+                /home/jenkins/.jenkins/workspace/pipeline/venv/python3 -m pytest --cov-report xml:coverage.xml""" 
 
             }
         }
         stage('Deploy') {
             steps {
                 if APP_RUN == true: {
-                python3 create.py
-                python3 app.py
+                sh """python3 create.py
+                python3 app.py"""
                 }
             }
         }
