--- a/scripts/Jenkinsfile
+++ b/scripts/Jenkinsfile
@@ -19,7 +19,8 @@ pipeline {
                 sh""" 
                 . ./venv/bin/activate
                 python3 -m pytest --junitxml unittests.xml
-                python3 -m pytest --cov-report xml:coverage.xml""" 
+                python3 -m pytest --cov-report term xml:coverage.xml
+                """ 
             }
         }
         stage('Deploy') {
