--- a/scripts/Jenkinsfile
+++ b/scripts/Jenkinsfile
@@ -25,12 +25,14 @@ pipeline {
         }
         stage('Deploy') {
             steps {
+                script{
                 if (APP_RUN == "True") {
                     sh """
                     . ./venv/bin/activate
                     python3 create.py
                     python3 app.py"""
                     }
+                }
             }
         }
         stage('post build') {
