--- a/scripts/Jenkinsfile
+++ b/scripts/Jenkinsfile
@@ -20,6 +20,7 @@ pipeline {
                 sh""" 
                 . ./venv/bin/activate
                 python3 -m pytest --junitxml unittests.xml
+                python3 -m pytest --cov-report xml:coverage.xml --cov=application
                 """ 
             }
         }
@@ -38,6 +39,9 @@ pipeline {
         stage('post build') {
             steps{
                 junit 'unittests.xml'
+                cobertura autoUpdateHealth: false, autoUpdateStability: false, coberturaReportFile: 'coverage.xml', conditionalCoverageTargets: '70, 0, 0', failUnhealthy: false, failUnstable: false, lineCoverageTargets: '80, 0, 0', maxNumberOfBuilds: 0, methodCoverageTargets: '80, 0, 0', onlyStable: false, sourceEncoding: 'ASCII', zoomCoverageChart: false
+archiveArtifacts artifacts: '*.xml', followSymlinks: false
+                
             }
         }
     }   
