--- a/scripts/Jenkinsfile
+++ b/scripts/Jenkinsfile
@@ -12,7 +12,8 @@ pipeline {
                 sh """sudo apt install python3-venv -y
                 python3 -m venv venv
                 . ./venv/bin/activate
-                pip3 install -r requirements.txt"""
+                pip3 install -r requirements.txt
+                pip3 install pytest-cov"""
             }
         }
         stage('Test') {
