--- a/scripts/Jenkinsfile
+++ b/scripts/Jenkinsfile
@@ -21,7 +21,7 @@ pipeline {
                 sh""" 
                 . ./venv/bin/activate
                 python3 -m pytest --junitxml unittests.xml
-                python3 -m pytest --cov-report xml:coverage.xml
+                python3 -m pytest --cov-report xml:coverage.xml --cov=application
                 """ 
             }
         }
