--- a/scripts/Jenkinsfile
+++ b/scripts/Jenkinsfile
@@ -3,7 +3,7 @@ pipeline {
     environment {
         SECRET_KEY = credentials('SECRET_KEY')
         DATABASE_URI = credentials('DATABASE_URI')
-        APP_RUN = True
+        APP_RUN = 'True'
     }
 
     stages {
@@ -35,7 +35,7 @@ pipeline {
         }
         stage('Deploy') {
             steps {
-                if (APP_RUN == true) {
+                if (APP_RUN == 'True') {
                 sh """docker run --name myapp -e DATABASE_URI=sqlite:///data.db -e SECRET_KEY=abcd -d -p 5000:5000 myapp"""
                 }
             }
