--- a/scripts/Jenkinsfile
+++ b/scripts/Jenkinsfile
@@ -3,6 +3,7 @@ pipeline {
     environment {
         SECRET_KEY = credentials('SECRET_KEY')
         DATABASE_URI = credentials('DATABASE_URI')
+        DOCKER_LOGIN = credentials('dockerhub_login')
         APP_RUN = 'True'
     }
 
@@ -23,9 +24,19 @@ pipeline {
 
             }
         }
+        stage('login') {
+            steps {
+                sh 'echo $DOCKER_LOGIN_PSW | docker login -u $DOCKER_LOGIN_USR --password-stdin'
+            }
+        }
         stage('Build') {
-            steps {sh"""docker build -t myapp ."""
-
+            steps {
+                sh"""docker build -t myapp ."""
+            }
+        }
+        stage('push'){
+            steps{
+                sh 'docker push corcoran909/myapp:latest'
             }
         }
         stage('Deploy') {
