--- a/scripts/Jenkinsfile
+++ b/scripts/Jenkinsfile
@@ -3,7 +3,7 @@ pipeline {
     environment {
         SECRET_KEY = credentials('SECRET_KEY')
         DATABASE_URI = credentials('DATABASE_URI')
-        DOCKER_LOGIN = credentials('dockerhub_login')
+        DOCKER_LOGIN = credentials('dockerhub-login')
         APP_RUN = 'True'
     }
 
