--- a/scripts/Jenkinsfile
+++ b/scripts/Jenkinsfile
@@ -21,7 +21,7 @@ pipeline {
             steps {
                 sh""" . ./venv/bin/activate
                 python3 -m pytest --junitxml unittests.xml
-                python3 -m pytest --cov-report xml:coverage.xml""" 
+                python3 -m pytest --cov-report term --cov-report xml:coverage.xml""" 
 
             }
         }
@@ -42,7 +42,14 @@ pipeline {
         }
         stage('Deploy') {
             steps {
-                sh """docker run --name myapp -e DATABASE_URI=sqlite:///data.db -e SECRET_KEY=abcd -d -p 5000:5000 myapp"""
+                sh """
+                docker network create my network
+                docker run --name myapp -e DATABASE_URI=$DATABASE_URI -e SECRET_KEY=$SECRET_KEY -d -p 5000:5000 myapp
+                docker run --name database -p 3306:3306 -e MYSQL_ROOT_PASSWORD=database-pw-d mysql-server:latest
+                docker network connect mynetwork myapp
+                docker network connect mynetwork database
+                . ./venv/bin/activate
+                python3 create.py"""
             }
         }
         stage('post build') {
