--- a/scripts/Jenkinsfile
+++ b/scripts/Jenkinsfile
@@ -44,7 +44,7 @@ pipeline {
             steps {
                 sh """
                 docker network create mynetwork
-                docker run --name myapp -e DATABASE_URI=$DATABASE_URI -e SECRET_KEY=$SECRET_KEY -d -p 5000:5000 myapp
+                docker run --name myapp -e DATABASE_URI=$DATABASE_URI -e SECRET_KEY=$SECRET_KEY -d -p 5000:5000 corcoran909/myapp
                 docker run --name database -p 3306:3306 -e MYSQL_ROOT_PASSWORD=database-pw-d mysql-server:latest
                 docker network connect mynetwork myapp
                 docker network connect mynetwork database
