--- a/scripts/Jenkinsfile
+++ b/scripts/Jenkinsfile
@@ -4,7 +4,7 @@ pipeline {
         SECRET_KEY = credentials('SECRET_KEY')
         DATABASE_URI = credentials('DATABASE_URI')
         DOCKER_LOGIN = credentials('dockerhub-login')
-        DBCR= credentials('Database_cr')
+        DBCR= credentials('database_cr')
         APP_RUN = 'True'
     }
 
@@ -44,14 +44,13 @@ pipeline {
         stage('Deploy') {
             steps {
                 sh """
-                docker network create mynetwork
-                docker run --name myapp -e DATABASE_URI=$DATABASE_URI -e SECRET_KEY=$SECRET_KEY -d -p 5000:5000 corcoran909/myapp
+                docker network ls | grep mynetwork > /dev/null || docker network create mynetwork
+                docker rm -f myapp
+                docker rm -f app-db
                 docker run --name app-db -p 3306:3306 -e MYSQL_ROOT_PASSWORD=$DBCR -e MYSQL_DATABASE=mydatabase -d mysql
-                docker network connect mynetwork myapp
                 docker network connect mynetwork app-db
-                . ./venv/bin/activate
-                pwd
-                python3 create.py"""
+                docker run --name myapp -e DATABASE_URI=$DATABASE_URI -e SECRET_KEY=$SECRET_KEY -d -p 5000:5000 corcoran909/myapp
+                """
             }
         }
         stage('post build') {
