--- a/scripts/Jenkinsfile
+++ b/scripts/Jenkinsfile
@@ -20,7 +20,7 @@ pipeline {
         }
         stage('Test') {
             steps {
-                sh""" . ./venv/bin/activate
+                sh """ . ./venv/bin/activate
                 python3 -m pytest --junitxml unittests.xml
                 python3 -m pytest --cov-report term --cov-report xml:coverage.xml""" 
 
@@ -31,9 +31,17 @@ pipeline {
                 sh 'echo $DOCKER_LOGIN_PSW | docker login -u $DOCKER_LOGIN_USR --password-stdin'
             }
         }
+        stage('Deploy Network and Database') {
+            steps {
+                sh """docker network ls | grep mynetwork > /dev/null || docker network create mynetwork
+                docker rm -f app-db
+                docker run --network mynetwork --name app-db -p 3306:3306 -e MYSQL_ROOT_PASSWORD=$DBCR -e MYSQL_DATABASE=mydatabase -d mysql
+                """
+            }
+        }
         stage('Build') {
             steps {
-                sh"""docker build -t corcoran909/myapp ."""
+                sh """docker build -t corcoran909/myapp ."""
             }
         }
         stage('push'){
@@ -44,10 +52,7 @@ pipeline {
         stage('Deploy') {
             steps {
                 sh """
-                docker network ls | grep mynetwork > /dev/null || docker network create mynetwork
                 docker rm -f myapp
-                docker rm -f app-db
-                docker run --network --mynetwork --name app-db -p 3306:3306 -e MYSQL_ROOT_PASSWORD=$DBCR -e MYSQL_DATABASE=mydatabase -d mysql
                 docker run --network mynetwork --name myapp -e DATABASE_URI=$DATABASE_URI -e SECRET_KEY=$SECRET_KEY -d -p 5000:5000 corcoran909/myapp
                 """
             }
