--- a/scripts/Jenkinsfile
+++ b/scripts/Jenkinsfile
@@ -3,60 +3,66 @@ pipeline {
     environment {
         SECRET_KEY = credentials('SECRET_KEY')
         DATABASE_URI = credentials('DATABASE_URI')
-        DOCKER_LOGIN = credentials('dockerhub-login')
-        DBCR= credentials('database_cr')
+        //DOCKER_LOGIN = credentials('DOCKERHUB')
+        DBCR= credentials('SQLPWD')
         APP_RUN = 'True'
     }
 
     stages {
         stage('Setup') {
             steps {
-                sh """sudo apt install python3-venv -y
+                sh """sudo install python3-venv -y
                 python3 -m venv venv
                 . ./venv/bin/activate
                 pip3 install -r requirements.txt
                 """
             }
         }
+
         stage('Test') {
             steps {
                 sh """ . ./venv/bin/activate
                 python3 -m pytest --junitxml unittests.xml
-                python3 -m pytest --cov-report term --cov-report xml:coverage.xml""" 
+                python3 -m pytest --cov-report xml:coverage.xml""" 
 
             }
         }
-        stage('login') {
+
+        /*stage('login') {
             steps {
                 sh 'echo $DOCKER_LOGIN_PSW | docker login -u $DOCKER_LOGIN_USR --password-stdin'
             }
-        }
+        }*/
+
         stage('Deploy Network and Database') {
             steps {
                 sh """docker network ls | grep mynetwork > /dev/null || docker network create mynetwork
+                docker run --network mynetwork --name appdb -e MYSQL_ROOT_PASSWORD=$SQLPWD -d mysql
                 """
             }
         }
+
         stage('Build') {
             steps {
-                sh """docker build -t corcoran909/myapp .
-                docker build -t createdb db/."""
+                sh """docker build -t corcoran909/myapp ."""
             }
         }
-        stage('push'){
+
+        /*stage('push'){
             steps{
                 sh 'docker push corcoran909/myapp:latest'
             }
-        }
+        }*/
+
         stage('Deploy') {
             steps {
                 sh """
                 docker rm -f myapp
-                docker run --network mynetwork --name createdb -e DATABASE_URI=$DATABASE_URI -d createdb 
-                docker run --network mynetwork --name myapp -e DATABASE_URI=$DATABASE_URI -e SECRET_KEY=$SECRET_KEY -d -p 5000:5000 corcoran909/myapp
+                docker run --network mynetwork --name myapp -d -p 5000:5000 corcoran909/myapp
                 """
             }
         }
+
         stage('post build') {
             steps{
                 junit 'unittests.xml'
