--- a/scripts/Jenkinsfile
+++ b/scripts/Jenkinsfile
@@ -11,7 +11,7 @@ pipeline {
     stages {
         stage('Setup') {
             steps {
-                sh """sudo install python3-venv 
+                sh """sudo apt install python3-venv -y 
                 python3 -m venv venv
                 . ./venv/bin/activate
                 pip3 install -r requirements.txt
