--- a/scripts/Jenkinsfile
+++ b/scripts/Jenkinsfile
@@ -38,6 +38,7 @@ pipeline {
             steps {
                 withCredentials([string(credentialsId: 'SQLPWD', variable: 'SQLPWD')]) {
                 sh """docker network ls | grep mynetwork > /dev/null || docker network create mynetwork
+                docker rm -f appdb
                 docker run --network mynetwork --name appdb -e MYSQL_ROOT_PASSWORD=${SQLPWD} -d mysql
                 """
                 }
