--- a/scripts/Jenkinsfile
+++ b/scripts/Jenkinsfile
@@ -42,7 +42,7 @@ pipeline {
         }
          stage('create database') {
             steps {
-                sh"docker exec -i myapp -c sh'python3 create.py'"
+                sh"docker exec myapp -c 'python3; create.py'"
             }
 }
 /*        stage('Build') {
