Revert "trying to run bash instead"
This reverts commit fc7c3a19e980a90514af9b840de853a3d7fb0894.

--- a/scripts/Jenkinsfile
+++ b/scripts/Jenkinsfile
@@ -42,9 +42,7 @@ pipeline {
         }
          stage('create database') {
             steps {
-                sh"""#!/bin/bash
-                docker  exec myapp python3 create.py
-                """
+                sh"docker -i exec myapp python3 create.py"
             }
 }
 /*        stage('Build') {
