--- a/scripts/Jenkinsfile
+++ b/scripts/Jenkinsfile
@@ -23,7 +23,7 @@ pipeline {
             steps {
                 sh """ . ./venv/bin/activate
                 python3 -m pytest --junitxml unittests.xml
-                python3 -m pytest --cov-report xml:coverage.xml""" 
+                python3 -m pytest --cov-report xml:coverage.xml --cov=tests/""" 
             }
         }
 
