created docker file, docker compose file, and got db working

--- a/db/Dockerfile
+++ b/db/Dockerfile
@@ -1,5 +1,4 @@
 FROM mysql
-COPY . .
-ENV MYSQL_ROOT_PASSWORD=root
+ENV MYSQL_ROOT_PASSWORD=${SQLPWD}
 ENV MYSQL_DATABASE=appdb
 COPY create_tables.sql /docker-entrypoint-initdb.d/
