--- a/scripts/Jenkinsfile
+++ b/scripts/Jenkinsfile
@@ -33,8 +33,8 @@ pipeline {
                 docker build -t corcoran909/webapp .
                 docker push corcoran909/webapp
                 cd db/
-                docker build -t corcoran909/webapp
-                docker push corcoran909/webapp"""
+                docker build -t corcoran909/mysql .
+                docker push corcoran909/mysql"""
             }
         }
 // This stage copies a compose file into the manager node sshs into manager node of swarm and sets up the docker stack
