--- a/scripts/Jenkinsfile
+++ b/scripts/Jenkinsfile
@@ -43,7 +43,7 @@ pipeline {
                 sh """scp scripts/docker-compose.yml jenkins@10.0.0.9:
                 ssh jenkins@10.0.0.9
                 sleep 3s
-                docker stack compose --compose-file docker-compose.yml webapp
+                docker stack deploy --compose-file docker-compose.yml webapp
                 exit
                 """
             }
