--- a/scripts/Jenkinsfile
+++ b/scripts/Jenkinsfile
@@ -41,11 +41,7 @@ pipeline {
         stage('deploy') {
             steps {
                 sh """scp scripts/docker-compose.yml jenkins@10.0.0.9:
-                ssh jenkins@10.0.0.9
-                sleep 3s
-                pwd
-                docker stack deploy --compose-file docker-compose.yml webapp
-                exit
+                ssh jenkins@10.0.0.9 'docker stack deploy --compose-file docker-compose.yml webapp'
                 """
             }
         }
