--- a/db/Dockerfile
+++ b/db/Dockerfile
@@ -1,4 +1,5 @@
 FROM mysql
-ENV MYSQL_ROOT_PASSWORD=${SQLPWD}
+ARG 
+ENV MYSQL_ROOT_PASSWORD=$SQLPWD
 ENV MYSQL_DATABASE=appdb
 COPY create_tables.sql /docker-entrypoint-initdb.d/
