--- a/scripts/Jenkinsfile
+++ b/scripts/Jenkinsfile
@@ -49,13 +49,13 @@ pipeline {
             }
         }
 // This stage copies a conf file into the vm, sshs into the vm and sets up a load balancer with a nginx server
-        // stage('create nginx load balancer'){
-        //     steps{
-        //         sh """cps  scripts/nginx.conf jenkins@GETAVMWITHIPADDRESS!
-        //         ssh jenkins@GETANIP!  'docker run -d -p 80:80 --name nginx --mount type=bind,source=${pwd}/nginx.conf,target=/etc/nginx/nginx.conf nginx'
-        //         """
-        //     }
-        // }
+        stage('create nginx load balancer'){
+            steps{
+                sh """cps  scripts/nginx.conf jenkins@10.0.0.15
+                ssh jenkins@10.0.0.15  'docker run -d -p 80:80 --name nginx --mount type=bind,source=$pwd/nginx.conf,target=/etc/nginx/nginx.conf nginx'
+                """
+            }
+        }
     
         stage('post build - test results') {
             steps{
