--- a/scripts/Jenkinsfile
+++ b/scripts/Jenkinsfile
@@ -52,7 +52,7 @@ pipeline {
         stage('create nginx load balancer'){
             steps{
                 sh """cps  scripts/nginx.conf jenkins@10.0.0.15
-                ssh jenkins@10.0.0.15  'docker run -d -p 80:80 --name nginx --mount type=bind,source=$pwd/nginx.conf,target=/etc/nginx/nginx.conf nginx'
+                ssh jenkins@10.0.0.15  'docker run -d -p 80:80 --name nginx --mount type=bind,source=${pwd}/nginx.conf,target=/etc/nginx/nginx.conf nginx'
                 """
             }
         }
