--- a/scripts/Jenkinsfile
+++ b/scripts/Jenkinsfile
@@ -29,15 +29,12 @@ pipeline {
 // This stage builds the two containers and pushes to docker hub
         stage('build and push') {
             steps {
-                withCredentials([string(credentialsId: 'SQLPWD', variable: 'password')]) {
-
                 sh """echo $DOCKER_LOGIN_PSW | docker login -u $DOCKER_LOGIN_USR --password-stdin
-                docker build -t corcoran909/webapp .
+                docker build -t --build-arg DATABASE_URI=$DATABASE_URI --build-arg SECRET_KEY=$SECRET_KEY corcoran909/webapp .
                 docker push corcoran909/webapp
                 cd db/
             docker build --build-arg MYSQL_ROOT_PASSWORD=$SQLPWD -t corcoran909/mysql .
                 docker push corcoran909/mysql"""
-                }
             }
         }
 // This stage copies a compose file into the manager node sshs into manager node of swarm and sets up the docker stack
@@ -52,11 +49,11 @@ pipeline {
         stage('create nginx load balancer'){
             steps{
                 sh """cps  scripts/nginx.conf jenkins@10.0.0.15
-                ssh jenkins@10.0.0.15  'docker run -d -p 80:80 --name nginx --mount type=bind,source=${pwd}/nginx.conf,target=/etc/nginx/nginx.conf nginx'
+                ssh jenkins@10.0.0.15  'docker run -d -p 80:80 --name nginx --mount type=bind,source=$(pwd)/nginx.conf,target=/etc/nginx/nginx.conf nginx'
                 """
             }
         }
-    
+// publish test results onto jenkins screen
         stage('post build - test results') {
             steps{
                 junit 'unittests.xml'
