--- a/scripts/Jenkinsfile
+++ b/scripts/Jenkinsfile
@@ -48,7 +48,7 @@ pipeline {
 // This stage copies a conf file into the vm, sshs into the vm and sets up a load balancer with a nginx server
         stage('create nginx load balancer') {
             steps{
-                sh """cps  scripts/nginx.conf jenkins@10.0.0.15
+                sh """scp  scripts/nginx.conf jenkins@10.0.0.15
                 ssh jenkins@10.0.0.15  "docker run -d -p 80:80 --name nginx --mount type=bind,source=nginx.conf,target=/etc/nginx/nginx.conf nginx"
                 """
             }
