--- a/scripts/nginx.conf
+++ b/scripts/nginx.conf
@@ -1,9 +1,10 @@
 events {}
 http {
     upstream webapp {
-        server 10.0.0.13:5000;
-        server 10.0.0.10:5000;
-        server 10.0.0.14:5000;
+        # server 10.0.0.13:5000;
+        # server 10.0.0.10:5000;
+        # server 10.0.0.14:5000;
+        server 20.90.85.197:5000;
     }
     server {
         location / {
