email details added in t jenkins file

--- a/scripts/Jenkinsfile
+++ b/scripts/Jenkinsfile
@@ -6,6 +6,7 @@ pipeline {
         DOCKER_LOGIN = credentials('DOCKER_LOGIN')
         SQLPWD= credentials('SQLPWD')
         APP_RUN = 'True'
+        EMAIL_TO = 'corcoran909@gmail.com'
     }
 // This stage creates virtual environment for the python container
     stages {
@@ -66,7 +67,19 @@ archiveArtifacts artifacts: '*.xml', followSymlinks: false
     }   
     post {
         failure {
-            mail bcc: '', body: "<b>Example</b><br>Project: ${env.JOB_NAME} <br>Build Number: ${env.BUILD_NUMBER} <br> URL de build: ${env.BUILD_URL}", cc: '', charset: 'UTF-8', from: '', mimeType: 'text/html', replyTo: '', subject: "ERROR CI: Project name -> ${env.JOB_NAME}", to: "corcoran909@gmail.com";
+            emailext body: 'Check console output at $BUILD_URL to view the results. \n\n ${CHANGES} \n\n -------------------------------------------------- \n${BUILD_LOG, maxLines=100, escapeHtml=false}', 
+                    to: "${EMAIL_TO}", 
+                    subject: 'Build failed in Jenkins: $PROJECT_NAME - #$BUILD_NUMBER'
+        }
+        unstable {
+            emailext body: 'Check console output at $BUILD_URL to view the results. \n\n ${CHANGES} \n\n -------------------------------------------------- \n${BUILD_LOG, maxLines=100, escapeHtml=false}', 
+                    to: "${EMAIL_TO}", 
+                    subject: 'Unstable build in Jenkins: $PROJECT_NAME - #$BUILD_NUMBER'
+        }
+        changed {
+            emailext body: 'Check console output at $BUILD_URL to view the results.', 
+                    to: "${EMAIL_TO}", 
+                    subject: 'Jenkins build is back to normal: $PROJECT_NAME - #$BUILD_NUMBER'
         }
     }
 }
