added field constraints to SQL and models, plus fixed typo

--- a/scripts/Jenkinsfile
+++ b/scripts/Jenkinsfile
@@ -5,8 +5,7 @@ pipeline {
         DATABASE_URI = credentials('DATABASE_URI')
         DOCKER_LOGIN = credentials('DOCKER_LOGIN')
         SQLPWD= credentials('SQLPWD')
-        APP_RUN = 'True'
-        EMAIL_TO = 'corcoran909@gmail.com'
+        EMAIL_TO = credentials('EMAIL')
     }
     stages {
 // This stage runs unit tests and saves them to files to be picked up post build 
@@ -51,7 +50,7 @@ pipeline {
                 junit 'unittests.xml'
                 cobertura autoUpdateHealth: false, autoUpdateStability: false, coberturaReportFile: 'coverage.xml', conditionalCoverageTargets: '70, 0, 0', failUnhealthy: false, failUnstable: false, lineCoverageTargets: '80, 0, 0', maxNumberOfBuilds: 0, methodCoverageTargets: '80, 0, 0', onlyStable: false, sourceEncoding: 'ASCII', zoomCoverageChart: false
 archiveArtifacts artifacts: '*.xml', followSymlinks: false
-                emailext body: 'Your build $PROJECT_NAME - #$BUILD_NUMBER ran \n\n ${CHANGES} \n\n -------------------------------------------------- \n ${BUILD_LOG, maxLines=100, escapeHtml=false}', subject: 'Jenkins build completed', to: 'corcoran909@gmail.com'
+                emailext body: 'Your build $PROJECT_NAME - #$BUILD_NUMBER ran \n\n ${CHANGES} \n\n -------------------------------------------------- \n ${BUILD_LOG, maxLines=100, escapeHtml=false}', subject: 'Jenkins build completed', to: '$EMAIL_TO'
             }
         }
     }   
