--- a/scripts/Jenkinsfile
+++ b/scripts/Jenkinsfile
@@ -9,13 +9,13 @@ pipeline {
     }
     stages {
 //this stage sets up the virtual environment for the unit tests
-                stage('Setup') {
-            steps {
-                sh """sudo apt install python3-venv -y 
-                python3 -m venv venv
-                . ./venv/bin/activate
-                pip3 install -r requirements.txt
-                """
+    stage('Setup') {
+        steps {
+            sh """sudo apt install python3-venv -y 
+            python3 -m venv venv
+            . ./venv/bin/activate
+            pip3 install -r requirements.txt
+            """
             }
         }
 // This stage runs unit tests and saves them to files to be picked up post build 
@@ -62,7 +62,7 @@ pipeline {
                 junit 'unittests.xml'
                 cobertura autoUpdateHealth: false, autoUpdateStability: false, coberturaReportFile: 'coverage.xml', conditionalCoverageTargets: '70, 0, 0', failUnhealthy: false, failUnstable: false, lineCoverageTargets: '80, 0, 0', maxNumberOfBuilds: 0, methodCoverageTargets: '80, 0, 0', onlyStable: false, sourceEncoding: 'ASCII', zoomCoverageChart: false
 archiveArtifacts artifacts: '*.xml', followSymlinks: false
-                emailext body: 'Your build $PROJECT_NAME - #$BUILD_NUMBER ran \n\n ${CHANGES} \n\n -------------------------------------------------- \n ${BUILD_LOG, maxLines=100, escapeHtml=false}', subject: 'Jenkins build completed', to: '${EMAIL_TO}'
+                emailext body: 'Your build $PROJECT_NAME - #$BUILD_NUMBER ran \n\n ${CHANGES} \n\n -------------------------------------------------- \n ${BUILD_LOG, maxLines=100, escapeHtml=false}', subject: 'Jenkins build completed', to: $EMAIL_TO
             }
         }
     }   
