--- a/scripts/Jenkinsfile
+++ b/scripts/Jenkinsfile
@@ -7,26 +7,36 @@ pipeline {
         SQLPWD= credentials('SQLPWD')
     }
     stages {
-//this stage sets up the virtual environment for the unit tests
-    stage('Setup') {
-        steps {
-            sh """sudo apt install python3-venv -y 
-            python3 -m venv venv
-            . ./venv/bin/activate
-            pip3 install -r requirements.txt
-            """
+        stage('test inside container'){
+            steps{ sh """
+                docker build -t corcoran909/webapp:test .
+                docker run --name test_container --entrypoint /bin/bash tests/tests.sh
+                sleep 30s
+                docker cp test_container:unittests.xml
+                docker cp test_container:coverage.xml
+                """
             }
         }
-// This stage runs unit tests and saves them to files to be picked up post build 
-        stage('Test') {
-            steps {
-                sh """ . ./venv/bin/activate
-                python3 -m pytest --junitxml unittests.xml
-                python3 -m pytest --cov-report xml:coverage.xml --cov=tests/
-                deactivate
-                rm -rf /venv""" 
-            }
-        }
+// //this stage sets up the virtual environment for the unit tests
+//     stage('Setup') {
+//         steps {
+//             sh """sudo apt install python3-venv -y 
+//             python3 -m venv venv
+//             . ./venv/bin/activate
+//             pip3 install -r requirements.txt
+//             """
+//             }
+//         }
+// // This stage runs unit tests and saves them to files to be picked up post build 
+//         stage('Test') {
+//             steps {
+//                 sh """ . ./venv/bin/activate
+//                 python3 -m pytest --junitxml unittests.xml
+//                 python3 -m pytest --cov-report xml:coverage.xml --cov=tests/
+//                 deactivate
+//                 rm -rf /venv""" 
+//             }
+//         }
 // This stage builds the two containers and pushes to docker hub
         stage('build and push') {
             steps {
