--- a/scripts/Jenkinsfile
+++ b/scripts/Jenkinsfile
@@ -10,10 +10,13 @@ pipeline {
         stage('test inside container'){
             steps{ sh """
                 docker build -t corcoran909/webapp:test .
-                docker run --name test_container --entrypoint /bin/bash tests/tests.sh corcoran909/webapp:test
+                docker run -d --entrypoint /bin/bash  --name test_container corcoran909/webapp:test tests/tests.sh
                 sleep 30s
                 docker cp test_container:unittests.xml
                 docker cp test_container:coverage.xml
+                docker stop test_container
+                docker rm test_container
+                docker rmi corcoran909/webapp:test
                 """
             }
         }
