--- a/scripts/Jenkinsfile
+++ b/scripts/Jenkinsfile
@@ -4,7 +4,8 @@ pipeline {
         SECRET_KEY = credentials('SECRET_KEY')
         DATABASE_URI = credentials('DATABASE_URI')
         DOCKER_LOGIN = credentials('DOCKER_LOGIN')
-        SQLPWD= credentials('SQLPWD')
+        SQLPWD = credentials('SQLPWD')
+        EMAIL_TO = credentials('EMAIL')
     }
     stages {
 //this stage sets up the virtual environment for the unit tests
@@ -65,7 +66,7 @@ archiveArtifacts artifacts: '*.xml', followSymlinks: false
         }
         stage('send email on build status') {
             steps {
-         emailext body: 'Your build $PROJECT_NAME - #$BUILD_NUMBER ran \n\n ${CHANGES} \n\n -------------------------------------------------- \n ${BUILD_LOG, maxLines=100, escapeHtml=false}', subject: 'Jenkins build completed', to: 'corcoran909@gmail.com'
+         emailext body: 'Your build $PROJECT_NAME - #$BUILD_NUMBER ran \n\n ${CHANGES} \n\n -------------------------------------------------- \n ${BUILD_LOG, maxLines=100, escapeHtml=false}', subject: 'Jenkins build completed', to: '$EMAIL_TO'
             }
         }
     }   
