--- a/scripts/Jenkinsfile
+++ b/scripts/Jenkinsfile
@@ -66,7 +66,7 @@ archiveArtifacts artifacts: '*.xml', followSymlinks: false
         }
         stage('send email on build status') {
             steps {
-         emailext body: 'Your build $PROJECT_NAME - #$BUILD_NUMBER ran \n\n ${CHANGES} \n\n -------------------------------------------------- \n ${BUILD_LOG, maxLines=100, escapeHtml=false}', subject: 'Jenkins build completed', to: '$EMAIL_TO'
+         emailext body: 'Your build $PROJECT_NAME - #$BUILD_NUMBER ran \n\n ${CHANGES} \n\n -------------------------------------------------- \n ${BUILD_LOG, maxLines=100, escapeHtml=false}', subject: 'Jenkins build completed', to: $EMAIL_TO
             }
         }
     }   
