--- a/scripts/Jenkinsfile
+++ b/scripts/Jenkinsfile
@@ -5,7 +5,7 @@ pipeline {
         DATABASE_URI = credentials('DATABASE_URI')
         DOCKER_LOGIN = credentials('DOCKER_LOGIN')
         SQLPWD = credentials('SQLPWD')
-        EMAIL_TO = credentials('EMAIL')
+        EMAIL_TO = credentials('EMAIL_TO')
     }
     stages {
 //this stage sets up the virtual environment for the unit tests
